<resources>
  <string name="app_name">Deal Hunting</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="search">Search</string>
  <string name="drawer_open">Open Menu Navigation</string>
  <string name="drawer_close">Close Menu Navigation</string>
  <string name="content_authority">com.vagabond.dealhunting.app</string>
  <string name="sync_account_type">com.vagabond.dealhunting</string>
  <string name="nav_about_title">About Application</string>
  <string name="nav_setting_title">Settings</string>
  <string name="nav_browse_title">Browse</string>
  <string name="nav_browse_tutorial">Tutorial</string>
  <string name="nearest_location_msg">Địa điểm gần nhất</string>
  <string name="location_permission_denied">Denied</string>
  <string name="permission_required_toast">Required Permission</string>
  <string name="permission_rationale_location">Rationale Location</string>
  <string name="nav_store_title">Stores</string>
  <string name="store_tab_title">Stores</string>
  <string name="promotion_text">Promotion of</string>
  <string name="app_label">Search feature</string>
  <string name="search_hint">Nhập từ khoá</string>
  <string name="title_search">Search sessions</string>
  <string name="app_intro">Intro</string>
  <string name="hour_text">Giờ</string>
  <string name="day_text">Ngày</string>
  <string name="overtime">Hết hạn</string>
  <string name="pref_enable_notifications_default">false</string>
  <string name="pref_enable_notifications_key">NOTIFICATION_SETTING_KEY</string>
  <string name="pref_last_notification">last_notification</string>
  <string name="pref_notifiable_type_key">notifiable_type_key</string>
  <string name="mylocation_clicked">MyLocation button clicked</string>
  <string name="banner_ad_unit_id">ca-app-pub-2790836638899575/5775484841</string>
  <string name="banner_ad_app_id">"ca-app-pub-2790836638899575~6752690446"</string>
</resources>
