<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group
    android:id="@+id/grp1"
    android:checkableBehavior="single">
    <item
        android:id="@+id/ic_navview_browse"
        android:checkable="true"
        android:icon="@drawable/ic_navview_browse"
        android:title="@string/nav_browse_title"/>
    <item
      android:id="@+id/ic_navview_store"
      android:checkable="true"
      android:icon="@drawable/ic_store_black"
      android:title="@string/nav_store_title"/>
    <item
        android:id="@+id/ic_navview_tutorial"
        android:checkable="true"
        android:icon="@drawable/ic_navview_tutorial"
        android:title="@string/nav_browse_tutorial"/>
  </group>
  <group
  android:id="@+id/grp2"
  android:checkableBehavior="single">
  <item
      android:id="@+id/settings_nav_item"
      android:checkable="true"
      android:icon="@drawable/ic_navview_setttings"
      android:title="@string/nav_setting_title"/>
  <item
      android:id="@+id/about_nav_item"
      android:checkable="true"
      android:icon="@drawable/ic_navview_about"
      android:title="@string/nav_about_title"/>
  </group>
</menu>